--- a/index.html
+++ b/index.html
@@ -276,20 +276,163 @@
 
         <section class="education scroll-effect" id="education">
             <div class="education-main">
-                <div class="behance">
-                    <div class="edu-logo"></div>
-                    <div class="edu-head"></div>
-                    <div class="edu-con"></div>
+                <div class="education-head">
+                    <h1>Education</h1>
+                    <a href="">Download Resume</a>
                 </div>
-                <div class="envato">
-                    <div class="edu-logo"></div>
-                    <div class="edu-head"></div>
-                    <div class="edu-con"></div>
-                </div>
-                <div class="twiter">
-                    <div class="edu-logo"></div>
-                    <div class="edu-head"></div>
-                    <div class="edu-con"></div>
+
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+
+                            <div class="edu-sec behance">
+                                <div class="edu edu-logo">
+                                    <img src="assect/img/logo/behance.png" alt="">
+                                </div>
+                                <div class="edu edu-head">
+                                    <span>2019-2020</span>
+                                    <h3>Behance</h3>
+                                </div>
+                                <div class="edu edu-con">
+                                    <p>Which firmament dominion first rule and tree. The seas he i were cattle Under
+                                        living. It may best every forth place.
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="edu-sec Envato">
+                                <div class="edu edu-logo">
+                                    <img src="assect/img/logo/envato.png" alt="">
+                                </div>
+                                <div class="edu edu-head">
+                                    <span>2017-2018</span>
+                                    <h3>Envato</h3>
+                                </div>
+                                <div class="edu edu-con">
+                                    <p>Which firmament dominion first rule and tree. The seas he i were cattle Under
+                                        living. It may best every forth place.
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="edu-sec Envato">
+                                <div class="edu edu-logo">
+                                    <img src="assect/img/logo/twitter.png" alt="">
+                                </div>
+                                <div class="edu edu-head">
+                                    <span>2015-2018</span>
+                                    <h3>Twitter</h3>
+                                </div>
+                                <div class="edu edu-con">
+                                    <p>Which firmament dominion first rule and tree. The seas he i were cattle Under
+                                        living. It may best every forth place.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="swiper-slide">
+                            <div class="edu-sec behance">
+                                <div class="edu edu-logo">
+                                    <img src="assect/img/logo/behance.png" alt="">
+                                </div>
+                                <div class="edu edu-head">
+                                    <span>2019-2020</span>
+                                    <h3>Behance</h3>
+                                </div>
+                                <div class="edu edu-con">
+                                    <p>Which firmament dominion first rule and tree. The seas he i were cattle Under
+                                        living. It may best every forth place.
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="edu-sec Envato">
+                                <div class="edu edu-logo">
+                                    <img src="assect/img/logo/envato.png" alt="">
+                                </div>
+                                <div class="edu edu-head">
+                                    <span>2017-2018</span>
+                                    <h3>Envato</h3>
+                                </div>
+                                <div class="edu edu-con">
+                                    <p>Which firmament dominion first rule and tree. The seas he i were cattle Under
+                                        living. It may best every forth place.
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="edu-sec Envato">
+                                <div class="edu edu-logo">
+                                    <img src="assect/img/logo/twitter.png" alt="">
+                                </div>
+                                <div class="edu edu-head">
+                                    <span>2015-2018</span>
+                                    <h3>Twitter</h3>
+                                </div>
+                                <div class="edu edu-con">
+                                    <p>Which firmament dominion first rule and tree. The seas he i were cattle Under
+                                        living. It may best every forth place.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="edu-sec behance">
+                                <div class="edu edu-logo">
+                                    <img src="assect/img/logo/behance.png" alt="">
+                                </div>
+                                <div class="edu edu-head">
+                                    <span>2019-2020</span>
+                                    <h3>Behance</h3>
+                                </div>
+                                <div class="edu edu-con">
+                                    <p>Which firmament dominion first rule and tree. The seas he i were cattle Under
+                                        living. It may best every forth place.
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="edu-sec Envato">
+                                <div class="edu edu-logo">
+                                    <img src="assect/img/logo/envato.png" alt="">
+                                </div>
+                                <div class="edu edu-head">
+                                    <span>2017-2018</span>
+                                    <h3>Envato</h3>
+                                </div>
+                                <div class="edu edu-con">
+                                    <p>Which firmament dominion first rule and tree. The seas he i were cattle Under
+                                        living. It may best every forth place.
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="edu-sec Envato">
+                                <div class="edu edu-logo">
+                                    <img src="assect/img/logo/twitter.png" alt="">
+                                </div>
+                                <div class="edu edu-head">
+                                    <span>2015-2018</span>
+                                    <h3>Twitter</h3>
+                                </div>
+                                <div class="edu edu-con">
+                                    <p>Which firmament dominion first rule and tree. The seas he i were cattle Under
+                                        living. It may best every forth place.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="education-button">
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
+                    </div>
+
+
+                    <div class="swiper-pagination"></div>
                 </div>
             </div>
 
