project page gsap

--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,9 @@
     <header>
         <div class="base">
             <div class="logo">
-                <img src="assect/img/logo.svg" alt="" />
+                <a href="index.html">
+                    <img src="assect/img/logo.svg" alt="" />
+                </a>
             </div>
             <nav class="head-nav">
                 <a href="#home">HOME</a>
