--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
 
 <body class="index-body">
 
+
+    <!-- loader - start -->
+    <div class="loader-main" id="loader">
+        <div class="loader-inner">
+            <div class="big">
+                <div class="small"></div>
+            </div>
+        </div>
+    </div>
+    <!-- loader - end -->
+
     <header>
         <div class="base">
             <div class="logo">
@@ -31,7 +42,7 @@
                 <a href="#education">EDUCATION</a>
                 <a href="#testimonials">TESTIMONIALS</a>
                 <a href="#partners">PARTNERS</a>
-                <a href="blog.html">BLOG</a>
+                <a href="#blog">BLOG</a>
                 <a href="#contact">CONTACT</a>
             </nav>
             <div class="num">+7(212)674-25-10</div>
@@ -278,7 +289,7 @@
             <div class="education-main">
                 <div class="education-head">
                     <h1>Education</h1>
-                    <a href="">Download Resume</a>
+                    <a href="assect/resume/PANNEER SELVAM - Frontend Developer.pdf" download="PANNEER SELVAM.pdf">Download Resume</a>
                 </div>
 
                 <div class="swiper mySwiper">
