index page animation

--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@
         <section class="home scroll-effect" id="home">
             <div class="home-content-main">
                 <div class="home-content-inner">
-                    <!-- <div class="h-content"> -->
                     <div class="play-main">
                         <div class="play-out">
                             <i class="fa fa-play" aria-hidden="true"></i>
@@ -132,7 +131,6 @@
                             encourage
                         </p>
                     </div>
-                    <!-- </div> -->
                 </div>
             </div>
         </section>
@@ -157,7 +155,7 @@
                     <div class="aet-head">
                         <h3>Great Experience</h3>
                     </div>
-                    <div class="aet-contect">
+                    <div class="aet-content">
                         <p>
                             Fill appear won't may make moveth signs. Fourth. Good own. Green
                             you're moveth us, lesser.
@@ -166,7 +164,7 @@
                     <div class="about-range-main">
                         <div class="range-box web">
                             <div class="range-counter">
-                                <h5>WEB DESIGN</h5> <span>70%</span>
+                                <h5>WEB DESIGN</h5> <span id="web-count"></span>
                             </div>
                             <div class="range-box-out">
                                 <div class="range r1"></div>
@@ -174,7 +172,7 @@
                         </div>
                         <div class="range-box figma">
                             <div class="range-counter">
-                                <h5>FIGMA</h5> <span>85%</span>
+                                <h5>FIGMA</h5> <span id="figma-count"></span>
                             </div>
                             <div class="range-box-out">
                                 <div class="range r2"></div>
@@ -182,7 +180,7 @@
                         </div>
                         <div class="range-box wordpress">
                             <div class="range-counter">
-                                <h5>WORDPRESS</h5> <span>90%</span>
+                                <h5>WORDPRESS</h5> <span id="wp-count"></span>
                             </div>
                             <div class="range-box-out">
                                 <div class="range r3"></div>
@@ -289,7 +287,8 @@
             <div class="education-main">
                 <div class="education-head">
                     <h1>Education</h1>
-                    <a href="assect/resume/PANNEER SELVAM - Frontend Developer.pdf" download="PANNEER SELVAM.pdf">Download Resume</a>
+                    <a href="assect/resume/PANNEER SELVAM - Frontend Developer.pdf"
+                        download="PANNEER SELVAM.pdf">Download Resume</a>
                 </div>
 
                 <div class="swiper mySwiper">
@@ -665,7 +664,7 @@
     <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="assect/js/main.js"></script>
-    <script src="assect/js/gsap.js"></script>
+    <!-- <script src="assect/js/gsap.js"></script> -->
 </body>
 
 </html>
