--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>blog 2 </title>
+    <title>Gillber - Single Post</title>
     <!-- <link rel="stylesheet" href="assect/css/style.css" /> -->
     <link rel="stylesheet" href="assect/css/blog.css" />
 
@@ -107,14 +107,14 @@
                     <h3>Beast Creature days.</h3>
                 </div>
                 <div class="creature-paragrap">
-                    <p>
+                    <p class="creature-para-gsap">
                         This response is important for our ability to learn from mistakes,
                         but it alsogives rise to self-criticism, because it is part of the
                         threat-protection system. In other words, what keeps us safe can
                         go too far, and keep us too safe. In fact it can trigger
                         self-censoring.
                     </p>
-                    <p>
+                    <p class="creature-para-gsap">
                         This response is important for our ability to learn from mistakes,
                         but it alsogives rise to self-criticism, because it is part of the
                         threat-protection system. In other words, what keeps us safe can
@@ -262,12 +262,17 @@
 
 
 
-
+    <!-- gsap cdn - start -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <!-- gsap cdn - end -->
 
 
     <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="assect/js/main.js"></script>
+    <script src="assect/js/gsap.js"></script>
+
 </body>
 
 </html>
