--- a/projects.html
+++ b/projects.html
@@ -1,219 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projects</title>
-    <!-- <link rel="stylesheet" href="assect/css/style.css" /> -->
-    <link rel="stylesheet" href="assect/css/projects.css" />
 
-    <!-- fafa cdn - start -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <!-- fafa cdn - end -->
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Projects</title>
+  <!-- <link rel="stylesheet" href="assect/css/style.css" /> -->
+  <link rel="stylesheet" href="assect/css/projects.css" />
 
-  <body>
-    <header>
-      <div class="base">
-        <div class="logo">
-          <a href="index.html">
-            <img src="assect/img/logo.svg" alt="" />
-          </a>
+  <!-- fafa cdn - start -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <!-- fafa cdn - end -->
+</head>
+
+<body>
+  <!-- loader - start -->
+  <div class="loader-main" id="loader">
+    <div class="loader-inner">
+      <div class="big">
+        <div class="small"></div>
+      </div>
+    </div>
+  </div>
+  <!-- loader - end -->
+  <header>
+    <div class="base">
+      <div class="logo">
+        <a href="index.html">
+          <img src="assect/img/logo.svg" alt="" />
+        </a>
+      </div>
+      <nav class="head-nav">
+        <a href="#home">HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="projects.html">PROJECTS</a>
+        <a href="#education">EDUCATION</a>
+        <a href="#testimonials">TESTIMONIALS</a>
+        <a href="#partners">PARTNERS</a>
+        <a href="blog.html">BLOG</a>
+        <a href="#contact">CONTACT</a>
+      </nav>
+      <div class="num">+7(212)674-25-10</div>
+      <div class="res-nav-icon">
+        <img class="res-nav-icon" src="assect/img/logo/nav - 3.png" alt="" />
+      </div>
+      <div class="social">
+        <div class="icon">
+          <i class="fa fa-facebook" aria-hidden="true"></i> <br />
+          <i class="fa fa-twitter" aria-hidden="true"></i> <br />
+          <i class="fa fa-instagram" aria-hidden="true"></i> <br />
         </div>
-        <nav class="head-nav">
-          <a href="#home">HOME</a>
-          <a href="#about">ABOUT</a>
-          <a href="projects.html">PROJECTS</a>
-          <a href="#education">EDUCATION</a>
-          <a href="#testimonials">TESTIMONIALS</a>
-          <a href="#partners">PARTNERS</a>
-          <a href="blog.html">BLOG</a>
-          <a href="#contact">CONTACT</a>
-        </nav>
-        <div class="num">+7(212)674-25-10</div>
-        <div class="res-nav-icon">
-          <img class="res-nav-icon" src="assect/img/logo/nav - 3.png" alt="" />
+        <div class="copyRight-main">
+          <div class="copyRight">
+            <p>©&nbsp;Gilber.&nbsp;2020</p>
+          </div>
         </div>
-        <div class="social">
-          <div class="icon">
+      </div>
+    </div>
+  </header>
+
+  <section class="res-nav">
+    <div class="res-nav-inner">
+      <div class="rn-language">
+        <div class="lng">
+          <a href="">ENG</a>
+          <a href="">FRA</a>
+          <a href="">GER</a>
+        </div>
+        <div class="cancel">
+          <img src="assect/img/logo/close.png" alt="" />
+        </div>
+      </div>
+      <div class="rs-menu">
+        <ul>
+          <li><a class="cancel" href="#home">Home</a></li>
+          <li><a class="cancel" href="#about">About</a></li>
+          <li><a class="cancel" href="#projects">Projects</a></li>
+          <li><a class="cancel" href="#education">Education</a></li>
+          <li><a class="cancel" href="#testimonials">Testimonials</a></li>
+          <li><a class="cancel" href="#partners">Partners</a></li>
+          <li><a class="cancel" href="#blog">Blog</a></li>
+          <li><a class="cancel" href="#contact">Contact</a></li>
+        </ul>
+      </div>
+      <div class="rs-link">
+        <div class="rs-link-inner">
+          <div class="rsl-social">
             <i class="fa fa-facebook" aria-hidden="true"></i> <br />
             <i class="fa fa-twitter" aria-hidden="true"></i> <br />
             <i class="fa fa-instagram" aria-hidden="true"></i> <br />
           </div>
-          <div class="copyRight-main">
-            <div class="copyRight">
-              <p>©&nbsp;Gilber.&nbsp;2020</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
-
-    <section class="res-nav">
-      <div class="res-nav-inner">
-        <div class="rn-language">
-          <div class="lng">
-            <a href="">ENG</a>
-            <a href="">FRA</a>
-            <a href="">GER</a>
-          </div>
-          <div class="cancel">
-            <img src="assect/img/logo/close.png" alt="" />
-          </div>
-        </div>
-        <div class="rs-menu">
-          <ul>
-            <li><a class="cancel" href="#home">Home</a></li>
-            <li><a class="cancel" href="#about">About</a></li>
-            <li><a class="cancel" href="#projects">Projects</a></li>
-            <li><a class="cancel" href="#education">Education</a></li>
-            <li><a class="cancel" href="#testimonials">Testimonials</a></li>
-            <li><a class="cancel" href="#partners">Partners</a></li>
-            <li><a class="cancel" href="#blog">Blog</a></li>
-            <li><a class="cancel" href="#contact">Contact</a></li>
-          </ul>
-        </div>
-        <div class="rs-link">
-          <div class="rs-link-inner">
-            <div class="rsl-social">
-              <i class="fa fa-facebook" aria-hidden="true"></i> <br />
-              <i class="fa fa-twitter" aria-hidden="true"></i> <br />
-              <i class="fa fa-instagram" aria-hidden="true"></i> <br />
-            </div>
-            <div class="rsl-copyright">
-              <p>
-                © 2020 COPYRIGHT. <br />
-                ALL RIGHTS RESERVED.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section
-      class="project-banner"
-      style="background-image: url('assect/img/bottle.jpg')"
-    >
-      <div></div>
-      <div class="project-banner-main">
-        <!-- <div class="banner-content"> -->
-        <div class="banner-head">
-          <h4>The Bottle<span>.</span></h4>
-        </div>
-        <!-- </div> -->
-
-        <div class="banner-info">
-          <div class="bi-s bi-design">
-            <h4>DESIGN</h4>
-            <p>Jonny Laymore</p>
-          </div>
-          <br />
-
-          <div class="bi-s bi-services">
-            <h4>SERVICES</h4>
-            <p>Branding, UI/UX Design, Mobile Design</p>
-          </div>
-          <br />
-
-          <div class="bi-s bi-date">
-            <h4>DATE</h4>
-            <p>Feburary 25th, 2020</p>
-          </div>
-          <br />
-
-          <div class="bi-s bi-team">
-            <h4>TEAM</h4>
-            <p>Paul - Designer</p>
-            <p>VLThemes - Coder</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="project-info">
-      <div class="project-info-main">
-        <p>
-          Updated portraits of all Instrument employees for the new Instrument
-          site. A unified look and background allows photos to mesh seamlessly
-          online. To see it live check out:<a href=""
-            >https://example.domain/denima6vsco</a
-          >
-        </p>
-      </div>
-    </section>
-
-    <section class="breaf">
-      <div class="breaf-main">
-        <div class="breaf-img">
-          <img src="assect/img/bottle2.jpg" alt="" />
-        </div>
-
-        <div class="breaf-con" id="breaf-con">
-          <div class="breaf-head" id="bread-head">
-            <h3 class="breaf-sec" id="breaf-h3">Breaf & idea</h3>
-          </div>
-          <div class="breaf-co">
-            <p class="breaf-sec" id="breaf-p1">
-              Thing form thing fifth. Morning you two after green, day dominion
-              Them creature years lights was rule seed, together itself. Lights
-              creeping second spirit air the. You night and their.
-            </p>
-            <p class="breaf-sec" id="breaf-p1">
-              Creepeth deep, dry whales. Given light, moving our. Third greater
-              them replenish fourth.
+          <div class="rsl-copyright">
+            <p>
+              © 2020 COPYRIGHT. <br />
+              ALL RIGHTS RESERVED.
             </p>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section
-      class="project-video"
-      style="background-image: url('assect/img/bottle3.jpg')"
-    >
-      <div class="project-video-play">
-        <i class="fa fa-play" aria-hidden="true"></i>
+  <section class="project-banner" style="background-image: url('assect/img/bottle.jpg')">
+    <div></div>
+    <div class="project-banner-main">
+      <!-- <div class="banner-content"> -->
+      <div class="banner-head">
+        <h4>The Bottle<span>.</span></h4>
       </div>
-    </section>
+      <!-- </div> -->
 
-    <section class="result">
-      <div class="result-main">
-        <div class="result-head">
-          <h3 class="result-gsap">Result.</h3>
+      <div class="banner-info">
+        <div class="bi-s bi-design">
+          <h4>DESIGN</h4>
+          <p>Jonny Laymore</p>
         </div>
+        <br />
 
-        <div class="result-info">
-          <p class="result-gsap">
-            To, him our hath one itself i great brought days may fowl, seed so
-            great is fifth, herb second, said. His place creepeth male sea.
-            Multiply bearing midst set.
+        <div class="bi-s bi-services">
+          <h4>SERVICES</h4>
+          <p>Branding, UI/UX Design, Mobile Design</p>
+        </div>
+        <br />
+
+        <div class="bi-s bi-date">
+          <h4>DATE</h4>
+          <p>Feburary 25th, 2020</p>
+        </div>
+        <br />
+
+        <div class="bi-s bi-team">
+          <h4>TEAM</h4>
+          <p>Paul - Designer</p>
+          <p>VLThemes - Coder</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="project-info">
+    <div class="project-info-main">
+      <p>
+        Updated portraits of all Instrument employees for the new Instrument
+        site. A unified look and background allows photos to mesh seamlessly
+        online. To see it live check out:<a href="">https://example.domain/denima6vsco</a>
+      </p>
+    </div>
+  </section>
+
+  <section class="breaf">
+    <div class="breaf-main">
+      <div class="breaf-img">
+        <img src="assect/img/bottle2.jpg" alt="" />
+      </div>
+
+      <div class="breaf-con" id="breaf-con">
+        <div class="breaf-head" id="bread-head">
+          <h3 class="breaf-sec" id="breaf-h3">Breaf & idea</h3>
+        </div>
+        <div class="breaf-co">
+          <p class="breaf-sec" id="breaf-p1">
+            Thing form thing fifth. Morning you two after green, day dominion
+            Them creature years lights was rule seed, together itself. Lights
+            creeping second spirit air the. You night and their.
+          </p>
+          <p class="breaf-sec" id="breaf-p1">
+            Creepeth deep, dry whales. Given light, moving our. Third greater
+            them replenish fourth.
           </p>
         </div>
+      </div>
+    </div>
+  </section>
 
-        <div class="result-img">
-          <img src="assect/img/bottle.jpg" alt="" />
-        </div>
+  <section class="project-video" style="background-image: url('assect/img/bottle3.jpg')">
+    <div class="project-video-play">
+      <i class="fa fa-play" aria-hidden="true"></i>
+    </div>
+  </section>
 
-        <div class="result-heart">
-          <div class="rh-inner">
-            <i class="fa fa-heart" aria-hidden="true"></i>
-          </div>
+  <section class="result">
+    <div class="result-main">
+      <div class="result-head">
+        <h3 class="result-gsap">Result.</h3>
+      </div>
+
+      <div class="result-info">
+        <p class="result-gsap">
+          To, him our hath one itself i great brought days may fowl, seed so
+          great is fifth, herb second, said. His place creepeth male sea.
+          Multiply bearing midst set.
+        </p>
+      </div>
+
+      <div class="result-img">
+        <img src="assect/img/bottle.jpg" alt="" />
+      </div>
+
+      <div class="result-heart">
+        <div class="rh-inner">
+          <i class="fa fa-heart" aria-hidden="true"></i>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- gsap cdn - start -->
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
-    <!-- gsap cdn - end -->
+  <!-- gsap cdn - start -->
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+  <!-- gsap cdn - end -->
 
-    <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="assect/js/main.js"></script>
-    <script src="assect/js/gsap.js"></script>
-  </body>
+  <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="assect/js/main.js"></script>
+  <script src="assect/js/gsap.js"></script>
+</body>
+
 </html>
